DigicielFull/force-app/main/default/objects/Pre_Sales_Update__c/Pre_Sales_Update__c.object-meta.xml
<CustomObject>
    <label>Pre Sales Update</label>
    <nameField>
        <label>Pre Sales Update Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pre Sales Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>