DigicielFull/force-app/main/default/objects/Pre_Sales_Update__c/fields/Opp_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Opp_Owner_Email__c</fullName>
    <label>Opp Owner Email</label>
    <type>Email</type>
</CustomField>