DigicielFull/force-app/main/default/objects/Pre_Sales_Update__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Look up to Opportunity Owner</inlineHelpText>
    <label>Opportunity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pre_Sales_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>