DigicielFull/force-app/main/default/objects/Pre_Sales_Update__c/fields/Pre_Sales_Update__c.field-meta.xml
<CustomField>
    <fullName>Pre_Sales_Update__c</fullName>
    <label>Pre Sales Update</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>