DigicielFull/force-app/main/default/objects/Pre_Sales_Update__c/fields/Sales_Rep_Update__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Update__c</fullName>
    <label>Sales Rep Update</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>