DigicielFull/force-app/main/default/objects/Pre_Sales_Update__c/recordTypes/Pre_Sales_Update.recordType-meta.xml
<RecordType>
    <fullName>Pre_Sales_Update</fullName>
    <active>true</active>
    <label>Pre Sales Update</label>
</RecordType>