DigicielFull/force-app/main/default/objects/Pre_Sales_Update__c/listViews/Anguilla_Pre_Sales_Team_Pre_Sales_Update.listView-meta.xml
<ListView>
    <fullName>Anguilla_Pre_Sales_Team_Pre_Sales_Update</fullName>
    <filterScope>Queue</filterScope>
    <label>Anguilla Pre Sales Team</label>
    <queue>Anguilla_Pre_Sales_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>