DigicielFull/force-app/main/default/objects/Pre_Sales_Update__c/listViews/Barbados_ICT_Pre_Sales_Updates_This_Week.listView-meta.xml
<ListView>
    <fullName>Barbados_ICT_Pre_Sales_Updates_This_Week</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Pre_Sales_Update__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>012d0000001l9b4</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Barbados ICT Pre Sales Updates This Week</label>
    <language>en_US</language>
    <sharedTo>
        <group>Barbados_ICT_Admin_Team</group>
        <group>Barbados_Power_Users</group>
        <group>ICT_Barbados_Account_Managers_All</group>
        <group>ICT_Barbados_Sales_Managers</group>
        <group>ICT_Barbados_Service_Delivery_Team</group>
        <group>ICT_Barbados_Technical</group>
    </sharedTo>
</ListView>