DigicielFull/force-app/main/default/objects/Pre_Sales_Update__c/listViews/BVI_Pre_SalesTeam_Pre_Sales_Update.listView-meta.xml
<ListView>
    <fullName>BVI_Pre_SalesTeam_Pre_Sales_Update</fullName>
    <filterScope>Queue</filterScope>
    <label>BVI Pre Sales Team</label>
    <queue>BVI_Pre_Sales_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>