DigicielFull/force-app/main/default/objects/Pre_Sales_Update__c/listViews/Group_Service_Delivery_Pre_Sales_Update.listView-meta.xml
<ListView>
    <fullName>Group_Service_Delivery_Pre_Sales_Update</fullName>
    <filterScope>Queue</filterScope>
    <label>Group Service Delivery</label>
    <queue>Group_Service_Delivery</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>