DigicielFull/force-app/main/default/objects/Pre_Sales_Update__c/listViews/Jamaica_Pre_Sales_Team_Pre_Sales_Update.listView-meta.xml
<ListView>
    <fullName>Jamaica_Pre_Sales_Team_Pre_Sales_Update</fullName>
    <filterScope>Queue</filterScope>
    <label>Jamaica Pre Sales Team</label>
    <queue>Jamaica_Pre_Sales_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>