DigicielFull/force-app/main/default/objects/Pre_Sales_Update__c/listViews/Pre_Sales_Update_This_Week.listView-meta.xml
<ListView>
    <fullName>Pre_Sales_Update_This_Week</fullName>
    <columns>NAME</columns>
    <columns>Customer_Vendor_Dependency__c</columns>
    <columns>Pre_Sales_Update__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_WEEK</value>
    </filters>
    <label>Pre Sales Update This Week</label>
    <sharedTo>
        <group>Barbados_ICT_Admin_Team</group>
        <group>ICT_Barbados_Account_Managers_All</group>
        <group>ICT_Barbados_Sales_Managers</group>
        <group>ICT_Barbados_Technical</group>
    </sharedTo>
</ListView>