DigicielFull/force-app/main/default/objects/Pre_Sales_Update__c/listViews/Solution_Architect_Pre_Sales_Update.listView-meta.xml
<ListView>
    <fullName>Solution_Architect_Pre_Sales_Update</fullName>
    <filterScope>Queue</filterScope>
    <label>Solution Architect</label>
    <queue>Solution_Architect</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>